[project]
name = "comfyui-fitsize"
description = "Nodes:Fit Size From Int/Image/Resize, Load Image And Resize To Fit, Pick Image From Batch/List, Crop Image Into Even Pieces, Image Region To Mask... A simple set of nodes for making an image fit within a bounding box"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/bronkula/comfyui-fitsize"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-fitsize"
Icon = ""
